--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ language: python
 python:
   - "2.7"
 install: 
-  - pip install -r requirements.txt --use-mirrors
+  - echo "pip install -r requirements.txt --use-mirrors"
 script:
   - nosetests
+  - sh requirements.sh
 notifications:
 email: false
