--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,11 @@
 language: python
 python:
   - "2.7"
-install: 
+install:
   - #pip install -r requirements.txt --use-mirrors
+  - ./requirements.sh
+  - ./build.sh
 script:
   - nosetests
-  - #sh requirements.sh
 notifications:
 email: false
