--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: python
 python:
   - "2.7"
+before_install:
+  - chmod +x requirements.sh
+  - chmod +x build.sh
 install:
   - #pip install -r requirements.txt --use-mirrors
   - ./requirements.sh
