--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
-language: python
+language: python, sh
+sudo: required
 python:
   - "2.7"
-sudo: required
 before_install:
   - chmod +x requirements.sh
   - chmod +x build.sh
