--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,19 @@ before_install:
   - chmod +x build.sh
 before_script:
   - #pip install -r requirements.txt --use-mirrors
-  - sh requirements.sh
-  - sh build.sh
+  - echo 'Build and Installation Module'
+  - echo 'Download source code:'
+  - wget http://www.pjsip.org/release/2.5.5/pjproject-2.5.5.tar.bz2
+  - tar xjvf pjproject-2.5.5.tar.bz2
+  - cd pjproject-2.5.5
+  - echo 'Configure and build:'
+  - ./configure CFLAGS='-O2 -fPIC'
+  - make dep
+  - make
+  - make install
+  - cd pjsip-apps/src/python
+  - sudo python ./setup.py install
+  - echo 'Installation module successful !'
 install:
 script:
   - nosetests
