--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,6 @@ sudo: required
 python:
   - "2.7"
 before_install:
-  - chmod +x requirements.sh
-  - chmod +x build.sh
 before_script:
   - #pip install -r requirements.txt --use-mirrors
   - echo 'Build and Installation Module'
@@ -13,13 +11,13 @@ before_script:
   - tar xjvf pjproject-2.5.5.tar.bz2
   - cd pjproject-2.5.5
   - echo 'Configure and build:'
-  - ./configure CFLAGS='-O2 -fPIC'
-  - make dep
-  - make
-  - make install
-  - cd pjsip-apps/src/python
-  - sudo python ./setup.py install
-  - echo 'Installation module successful !'
+  - #./configure CFLAGS='-O2 -fPIC'
+  - #make dep
+  - #make
+  - #make install
+  - #cd pjsip-apps/src/python
+  - #sudo python ./setup.py install
+  - #echo 'Installation module successful !'
 install:
 script:
   - nosetests
